@startuml
title Design Level Class Diagram for Editing Reader Account Information

package "Reader Subdomain" {
    class ReaderController {
        + getReaderById(readerId: String) : ResponseEntity<ReaderResponseModel>
        + createReader(readerRequest: ReaderRequestModel) : ResponseEntity<ReaderResponseModel>
        + updateReader(readerId: String, readerRequest: ReaderRequestModel) : ResponseEntity<ReaderResponseModel>  ' Editing operation
        + deleteReader(readerId: String) : ResponseEntity<Void>
    }

    class ReaderService {
        + getReaderById(readerId: String) : ReaderResponseModel
        + createReader(readerRequest: ReaderRequestModel) : ReaderResponseModel
        + updateReader(readerId: String, readerRequest: ReaderRequestModel) : ReaderResponseModel  ' Editing operation
        + deleteReader(readerId: String) : void
    }

    class ReaderRepository {
        + findById(readerId: String) : Optional<Reader>
        + save(reader: Reader) : Reader
        + deleteById(readerId: String) : void
    }

    class Reader {
        - readerId: String
        - name: String
        - email: String
        - passwordHash: String  ' For updating account credentials
    }

    class ReaderRequestModel {
        - name: String
        - email: String
        - password: String  ' New password (optional)
    }

    class ReaderResponseModel {
        - readerId: String
        - name: String
        - email: String
    }

    ReaderController --> ReaderService
    ReaderService --> ReaderRepository
    ReaderRepository --> Reader
    ReaderRequestModel --> Reader
    Reader --> ReaderResponseModel
}
@enduml
